src/routes/layout.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');

@import 'tailwindcss';
@plugin '@tailwindcss/forms';
@plugin '@tailwindcss/typography';

/* https://trycap.dev/guide/widget.html#styling */
/* list of attributes */

cap-widget {
	--cap-widget-width: 100%;
	--cap-font: 'Inter', sans-serif;
	--cap-spinner-color: '#ff8800';
}

.lightCap {
	--cap-background: #ffffff;
	--cap-color: #000000;
	--cap-border-color: #ffffff00;
}
.darkCap {
	--cap-background: oklch(26.9% 0 0);
	--cap-color: #ffffff;
	--cap-border-color: #00000000;
}

@theme {
	--font-inter: 'Inter', sans-serif;
	--font-mulish: 'Mulish', sans-serif;
	--font-wix: 'Wix Madefor Text', sans-serif;

	@keyframes spin {
		0% {
			transform: rotate(0deg);
		}
		100% {
			transform: rotate(360deg);
		}
	}
}

.animate-variable-spin {
	transform-origin: center;
	animation: spin 1s cubic-bezier(0.25, 0.5, 0.75, 0.5) infinite;
}

@layer base {
	:root {
		@apply m-0 overflow-x-hidden overflow-y-scroll p-0 font-inter font-light;
		--color-red: #b03030;
		--color-yellow: #c0c030;
		--color-green: #30b030;
	}
}

@layer components {
	h1 {
		@apply mb-1 text-2xl font-bold;
	}
	h2 {
		@apply mb-1 text-lg font-bold;
	}
	hr {
		@apply opacity-10;
	}
	button {
		@apply transition-all duration-100 hover:brightness-90 not-disabled:hover:-translate-px active:brightness-70 not-disabled:active:translate-px! disabled:opacity-50 disabled:brightness-50 disabled:saturate-0;
	}
	.buttonPrimary {
		@apply rounded-full p-2 ps-3 pe-3 font-bold;
	}
	.buttonLarge {
		@apply p-2;
	}
	input:focus {
		@apply outline-0;
	}
	input::placeholder {
		@apply opacity-70;
	}
	textarea::placeholder {
		@apply opacity-70;
	}

	.markdownText {
		@apply flex w-full grow flex-col gap-2;
	}
	.markdownText ul {
		@apply list-inside list-disc;
	}
	.markdownText ol {
		@apply list-inside list-decimal;
	}

	/* printable pages TODO */
	@media print {
		body {
			@apply bg-white! bg-none! text-black! **:border-black! **:bg-white! **:bg-none! **:text-black!;
		}
		#contentarea {
			width: 100%;
		}
	}

	.invisibleForm {
		@apply flex w-full flex-row gap-2 bg-transparent! p-0! shadow-none!;
	}
}

